2000-04-13  Clint Adams  <schizo@debian.org>

	* 10748: configure.in: set MAXJOB to whatever you want.

	* 10745: acconfig.h, configure.in, Src/zsh.h: set MAXJOB
	to MAX_TASKS_PER_USER if available under Linux.

2000-04-13  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 10743: Src/params.c: replenv() failed importing special params
	at start up because it was using the wrong environment block.

	* 10738: Doc/Zsh/builtins.yo, Doc/Zsh/params.yo, Src/builtin.c,
	Src/params.c: local parameters can be exported; typeset +g -x
	and local -x work in a natural way; currently typeset -g still
	behaves like typeset -gx.

2000-04-13  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10733: Completion/Builtins/_pids, Completion/User/_killall,
 	Doc/Zsh/compsys.yo: remove the `pids' tag, use `processes' instead
	
	* 10727: Src/builtin.c: make read -[kq] always print the prompt,
 	if any; after all they make sure they have a terminal anyway
	
	* 10726: Src/hashtable.c: fix field name for HAVE_NIS_PLUS
	
	* 10725: Src/Zle/compcore.c, Src/Zle/compctl.c,
 	Src/Zle/compresult.c: comment the `#if's for group numbers in
 	$compstate[insert]
	
	* 10724: Src/Zle/compresult.c, Src/Zle/zle_tricky.c: display
 	number of matches again when asking if a completion list should be
 	shown (only when not zero)
	
2000-04-12  Bart Schaefer  <schaefer@zsh.org>

	* 10706: Andrej: Completion/User/_man: Fix quoting in awk args.

2000-04-12  Oliver Kiddle  <opk@u.genie.co.uk>

	* 10701: Completion/Builtins/_bindkey, Doc/Zsh/mod_zle.yo:
	use _arguments for bindkey completion and fix typo in docs

2000-04-12  Bart Schaefer  <schaefer@zsh.org>

	* 10700: Andrej: Completion/User/_man: Support for Pyramid.

2000-04-12  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10699: Src/parse.c, Src/zsh.h: compare mapped zwc files using
 	stat instead of the pathnames
	
	* 10695: Completion/Core/_files, Completion/Core/_tags,
 	Doc/Zsh/compsys.yo: allow brace expansion on patterns for