@@ -1,3 +1,10 @@
+2000-04-14  Peter Stephenson  <pws@cambridgesiliconradio.com>
+
+	* 10756: Doc/Zsh/expn.yo, Src/glob.c, Src/pattern.c, Src/zsh.h:
+	fix (#s) and (#e) to work in allerlei parameter substitutions;
+	fix potential problem with (#e) in exclusions; note things in
+	manual which should work.
+
 2000-04-13  Clint Adams  <schizo@debian.org>
 
 	* 10748: configure.in: set MAXJOB to whatever you want.
